.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Digital_Media_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>lookup an account record on the DMR record</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Digital Media Requests</relationshipLabel>
        <relationshipName>Digital_Media_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up a case record from the DMR record</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Digital Media Requests</relationshipLabel>
        <relationshipName>Digital_Media_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to an Order record on the DMR record</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Digital Media Requests</relationshipLabel>
        <relationshipName>Digital_Media_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <formula>CreatedBy.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Digital Media Request</label>
    <nameField>
        <displayFormat>DMR-{0000}</displayFormat>
        <label>Digital Media Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Media Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>